--- a/app/src/main/res/layout/fragment_login_signup.xml
+++ b/app/src/main/res/layout/fragment_login_signup.xml
@@ -1,142 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.login.LoginSignupFragment"
-    android:layout_marginRight="25dp"
-    android:layout_marginLeft="25dp"
-    android:id="@+id/form_login_signup">
+    android:layout_marginStart="25dp"
+    android:layout_marginEnd="25dp"
+    tools:context=".ui.login.LoginSignupFragment">
 
     <TextView
         android:id="@+id/hey_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/HeyText"
-        android:textSize="40dp"
-        android:textColor="#E8772E"
         android:layout_marginTop="80dp"
+        android:text="@string/hey_text"
+        android:textColor="#E8772E"
+        android:textSize="40sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-                />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/welcome_back_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/SubtitleTextLogin"
-        android:textSize="30dp"
-        android:textColor="#E8772E"
-
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/subtitle_text_login"
+        android:textColor="@color/vivid_tangelo"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/hey_text"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/hey_text" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
-        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:layout_gravity="bottom"
-        app:tabTextColor="#E8772E"
-        app:tabIndicatorColor="#E8772E"
+        android:layout_marginTop="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/welcome_back_text"
+        app:tabIndicatorColor="@color/vivid_tangelo"
         app:tabIndicatorFullWidth="false"
         app:tabMode="fixed"
         app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/welcome_back_text"
-        >
+        app:tabTextColor="@color/vivid_tangelo">
 
-            <com.google.android.material.tabs.TabItem
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/login_tab"
+            android:textColor="@color/vivid_tangelo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tabs" />
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/login_tab"
-                android:textColor="#E8772E"
-                android:gravity="center_horizontal"
-                android:textSize="20dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tabs"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="50dp"
-                />
-             <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/SignUpTab"
-                android:gravity="center_horizontal"
-                android:textColor="#E8772E"
-                android:textSize="20dp"
-
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tabs"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="50dp"
-                />
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/SignUpTab"
+            android:textColor="@color/vivid_tangelo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tabs" />
 
     </com.google.android.material.tabs.TabLayout>
-
 
 
     <EditText
         android:id="@+id/email_field"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="@string/emailField"
-        android:inputType="textEmailAddress"
+        android:layout_marginTop="30dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="#E1D9D1"
-        android:paddingLeft="20dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:hint="@string/emailField"
+        android:inputType="textEmailAddress"
+        android:paddingStart="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tabs"
-        android:layout_marginTop="30dp"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tabs" />
 
     <EditText
         android:id="@+id/password_field"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/roundstyle"
+        android:backgroundTint="@color/timberwolf"
         android:hint="@string/passwordField"
         android:inputType="textPassword"
-        android:background="@drawable/roundstyle"
-        android:backgroundTint="#E1D9D1"
-        android:paddingLeft="20dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:paddingStart="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email_field"
-        android:layout_marginTop="40dp"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/email_field" />
 
     <Button
         android:id="@+id/actionButton"
-        android:background="@drawable/roundstyle"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:backgroundTint="#E8772E"
-        android:text="@string/loginButton"
         android:layout_marginTop="90dp"
-        app:layout_constraintTop_toBottomOf="@id/password_field"/>
+        android:background="@drawable/roundstyle"
+        android:backgroundTint="@color/vivid_tangelo"
+        android:text="@string/loginButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/password_field" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:text="@string/termsConditionText"
         android:layout_marginBottom="15dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/termsConditionText"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
 
-
-
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
