--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/CardView.Light"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,15 +18,16 @@
     android:layout_marginVertical="20dp"
     android:layout_marginHorizontal="25dp">
 
-    <ImageView
-        android:id="@+id/pic_details_product"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/productImage"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_marginBottom="40dp"
-        android:src="@drawable/voguely_logo"
+        tools:src="@drawable/voguely_logo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
     <TextView
         android:id="@+id/name_item_product_details"
         android:layout_width="0dp"
@@ -35,7 +37,7 @@
         android:textSize="15dp"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/pic_details_product"/>
+        app:layout_constraintTop_toBottomOf="@id/productImage"/>
     <TextView
         android:id="@+id/rate_product_details"
         android:layout_width="wrap_content"
@@ -46,7 +48,7 @@
         android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         android:drawableEnd="@drawable/ic_baseline_star_24"
-        app:layout_constraintTop_toBottomOf="@id/pic_details_product"/>
+        app:layout_constraintTop_toBottomOf="@id/productImage"/>
     <TextView
         android:id="@+id/price_product_details"
         android:layout_width="wrap_content"
