--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -19,7 +19,7 @@
     android:layout_marginHorizontal="25dp">
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/productImage"
+        android:id="@+id/productImageViewPager"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_marginBottom="40dp"
@@ -37,7 +37,7 @@
         android:textSize="15dp"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/productImage"/>
+        app:layout_constraintTop_toBottomOf="@id/productImageViewPager"/>
     <TextView
         android:id="@+id/rate_product_details"
         android:layout_width="wrap_content"
@@ -48,7 +48,7 @@
         android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         android:drawableEnd="@drawable/ic_baseline_star_24"
-        app:layout_constraintTop_toBottomOf="@id/productImage"/>
+        app:layout_constraintTop_toBottomOf="@id/productImageViewPager"/>
     <TextView
         android:id="@+id/price_product_details"
         android:layout_width="wrap_content"
