--- a/app/src/main/res/layout/product_image.xml
+++ b/app/src/main/res/layout/product_image.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/pictureCarousel"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:src="@drawable/voguely_logo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"   />
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/pictureCarousel"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:src="@drawable/voguely_logo"
+    />
 
